# nse_indices

./: NSE200_Momentum.ipynb  Readme.md  charter.py  charter_req.txt  delivery.py  main.py  requirements.txt
fact-sheets/: analyze_indices.py  app.py  nse_factsheet_processor.py  pyproject.toml
fact-sheets/templates/: about.html  base.html  factsheets.html  index.html  results.html
momentum-etf/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  analyzer.py  backtest_results.csv  backtrader_momentum_strategy.py  cli.py  compare_momentum_methods.py  core.py  core_fixed.py  etf_momentum_strategy.py  pyproject.toml  test_momentum_calculation.py  visualizer.py  web_server.py
momentum-etf/deploy/: README.md  cleanup.ps1  cleanup.sh  client.py  deploy.ps1  deploy.sh  docker-compose.yml
momentum-etf/deploy/infra/: main.bicep  parameters.json
momentum-etf/youtube/pair-trading/: .gitignore  adaptive_momentum.py  experiment_framework.py  experiments.py  main.py  nifty_universe.py  optimize.py  parameter_manager.py  pyproject.toml  strategy_config.json  streak_analyzer.py  unified_runner.py  utils.py
momentum-etf/youtube/pair-trading/data_parquet/: AAVAS.NS_1d.parquet  ABB.NS_1d.parquet  ABBOTINDIA.NS_1d.parquet  ABFRL.NS_1d.parquet  ACC.NS_1d.parquet  ADANIENT.NS_1d.parquet  ADANIGREEN.NS_1d.parquet  ADANIPORTS.NS_1d.parquet  ALKEM.NS_1d.parquet  ALKYLAMINE.NS_1d.parquet  AMBUJACEM.NS_1d.parquet  APOLLOHOSP.NS_1d.parquet  APOLLOTYRE.NS_1d.parquet  ASHOKLEY.NS_1d.parquet  ASIANPAINT.NS_1d.parquet  ASTRAL.NS_1d.parquet  ATUL.NS_1d.parquet  AUBANK.NS_1d.parquet  AUROPHARMA.NS_1d.parquet  AXISBANK.NS_1d.parquet  BAJAJ-AUTO.NS_1d.parquet  BAJAJFINSV.NS_1d.parquet  BAJFINANCE.NS_1d.parquet  BALKRISIND.NS_1d.parquet  BANDHANBNK.NS_1d.parquet  BANKBARODA.NS_1d.parquet  BATAINDIA.NS_1d.parquet  BEL.NS_1d.parquet  BERGEPAINT.NS_1d.parquet  BHARATFORG.NS_1d.parquet  BHARTIARTL.NS_1d.parquet  BHEL.NS_1d.parquet  BIOCON.NS_1d.parquet  BLUEDART.NS_1d.parquet  BOSCHLTD.NS_1d.parquet  BPCL.NS_1d.parquet  BRITANNIA.NS_1d.parquet  BSOFT.NS_1d.parquet  CANBK.NS_1d.parquet  CANFINHOME.NS_1d.parquet  (+173 more)
momentum-etf/youtube/pair-trading/strategies/: README.md  __init__.py  base_strategy.py  mean_reversion_strategy.py  momentum_strategy.py  nifty_shop_strategy.py  pairs_strategy.py  pmv_momentum_strategy.py  statistical_trend_strategy.py
(+21 files in other folders)
