[project]
name = "fact-sheets"
version = "0.1.0"
description = "NSE Indices Factsheet Downloader and Parser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "bs4>=0.0.2",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "tenacity>=8.2.3",
    "pdfplumber>=0.10.4",
    "tqdm>=4.66.1",
    "seaborn>=0.13.2",
    "scipy>=1.15.3",
    "statsmodels>=0.14.4",
    "scikit-learn>=1.7.0",
    "flask>=3.1.1",
]
