[project]
name = "momentum-etf"
version = "0.1.0"
description = "ETF Momentum Strategy with Backtrader Backtest"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "seaborn>=0.13.2",
    "yfinance>=0.2.65",
    "tabulate>=0.9.0",
    "backtrader>=1.9.78.123",
]

