[project]
name = "pair-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtrader>=1.9.78.123",
    "black>=25.1.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "yfinance>=0.2.65",
    "tabulate>=0.9.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
]
